fix(web): table element overflow in blog post

--- a/web/src/layouts/BlogPostLayout.scss
+++ b/web/src/layouts/BlogPostLayout.scss
@@ -185,6 +185,11 @@
     max-width: 100vw;
   }
 
+  .feature-table {
+    max-width: 100%;
+    overflow-x: auto;
+  }
+
   table {
     width: 100%;
     font-size: var(--font-size-md);
